--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,8 @@
 machine:
-  pre:
-    - echo 'DOCKER_OPTS="-s btrfs -e lxc -D --userland-proxy=false"' | sudo tee -a /etc/default/docker
-    - sudo curl -L -o /usr/bin/docker 'https://s3-external-1.amazonaws.com/circle-downloads/docker-1.9.1-circleci-cp-workaround'
-    - sudo chmod 0755 /usr/bin/docker
+  # pre:
+  #   - echo 'DOCKER_OPTS="-s btrfs -e lxc -D --userland-proxy=false"' | sudo tee -a /etc/default/docker
+  #   - sudo curl -L -o /usr/bin/docker 'https://s3-external-1.amazonaws.com/circle-downloads/docker-1.9.1-circleci-cp-workaround'
+  #   - sudo chmod 0755 /usr/bin/docker
   services:
     - docker
 
@@ -14,11 +14,10 @@ machine:
 dependencies:
   override:
     - docker login -e $DOCKER_EMAIL -u $DOCKER_REPO_LOGIN -p $DOCKER_PASS
-    - sudo ./build/build.sh
 
 test:
   override:
-    - echo "I'll put a script here eventually"
+    - make
 
 deployment:
   latest:
