--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,7 @@ machine:
     DOCKER_EMAIL: cole.brumley@gmail.com
     CGO_ENABLED: 0
     GO15VENDOREXPERIMENT: 1
+    GOPATH: /home/ubuntu/.go_workspace
 
 dependencies:
   override:
