--- a/circle.yml
+++ b/circle.yml
@@ -1,12 +1,8 @@
 machine:
-  # pre:
-  #   - echo 'DOCKER_OPTS="-s btrfs -e lxc -D --userland-proxy=false"' | sudo tee -a /etc/default/docker
-  #   - sudo curl -L -o /usr/bin/docker 'https://s3-external-1.amazonaws.com/circle-downloads/docker-1.9.1-circleci-cp-workaround'
-  #   - sudo chmod 0755 /usr/bin/docker
   services:
     - docker
-
   environment:
+    IMPORT_PATH: "github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
     REPO_USER: elcolio
     DOCKER_REPO_LOGIN: elcolio
     DOCKER_EMAIL: cole.brumley@gmail.com
@@ -14,18 +10,25 @@ machine:
     GO15VENDOREXPERIMENT: 1
     GOPATH: /home/ubuntu/.go_workspace
 
+
 dependencies:
   override:
+    - sudo add-apt-repository ppa:masterminds/glide -y
+    - sudo apt-get update
+    - sudo apt-get install glide -y
     - docker login -e $DOCKER_EMAIL -u $DOCKER_REPO_LOGIN -p $DOCKER_PASS
-    - make deps
+    - mkdir -p "${GOPATH}/src/${IMPORT_PATH}"
+    - rsync -azC --delete ./ "${GOPATH}/src/${IMPORT_PATH}/"
 
 test:
+  pre:
+    - go vet ./...
   override:
-    - make build
+    - go build -x -a -installsuffix cgo -o ${CIRCLE_ARTIFACTS}/${CIRCLE_PROJECT_REPONAME}
 
 deployment:
   latest:
     branch: master
     commands:
-      - make docker
-      - docker push elcolio/tlspxy:latest
+      - docker build -t ${REPO_USER}/${CIRCLE_PROJECT_REPONAME}:latest .
+      - docker push ${REPO_USER}/${CIRCLE_PROJECT_REPONAME}:latest
