Creating /contrib, moving Docker and systemd unit there

--- a/contrib/Dockerfile
+++ b/contrib/Dockerfile
@@ -1,5 +1,5 @@
 FROM        alpine:latest
 MAINTAINER  Cole Brumley <github.com/colebrumley>
 RUN         apk add --update ca-certificates; rm -Rf /var/cache/apk/*
-COPY        bin/tlspxy /sbin/tlspxy
+COPY        bin/tlspxy_linux_x64 /sbin/tlspxy
 ENTRYPOINT  ["/sbin/tlspxy"]
