--- a/circle.yml
+++ b/circle.yml
@@ -31,5 +31,5 @@ deployment:
     branch: master
     commands:
       - mkdir bin; cp -a ${CIRCLE_ARTIFACTS}/${CIRCLE_PROJECT_REPONAME} bin/${CIRCLE_PROJECT_REPONAME}
-      - docker build -t ${REPO_USER}/${CIRCLE_PROJECT_REPONAME}:latest .
+      - docker build -t ${REPO_USER}/${CIRCLE_PROJECT_REPONAME}:latest -f contrib/Dockerfile .
       - docker push ${REPO_USER}/${CIRCLE_PROJECT_REPONAME}:latest
