--- a/circle.yml
+++ b/circle.yml
@@ -24,12 +24,11 @@ test:
   pre:
     - cd "${GOPATH}/src/${IMPORT_PATH}/" && glide install
   override:
-    - cd "${GOPATH}/src/${IMPORT_PATH}/" && go build -x -a -installsuffix cgo -o ${CIRCLE_ARTIFACTS}/${CIRCLE_PROJECT_REPONAME}
+    - cd "${GOPATH}/src/${IMPORT_PATH}/" && make build
 
 deployment:
   latest:
     branch: master
     commands:
-      - mkdir bin; cp -a ${CIRCLE_ARTIFACTS}/${CIRCLE_PROJECT_REPONAME} bin/${CIRCLE_PROJECT_REPONAME}_linux_x86_64
       - docker build -t ${REPO_USER}/${CIRCLE_PROJECT_REPONAME}:latest -f contrib/Dockerfile .
       - docker push ${REPO_USER}/${CIRCLE_PROJECT_REPONAME}:latest
